--- a/index.html
+++ b/index.html
@@ -85,5 +85,37 @@
     </ul>
   </section>
 
+  <section>
+    <h2>Comidas</h2>
+
+    <ul>
+      <li>
+        <div class="details">
+          <h3>Carne</h3>
+          <p class="description">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+
+        <strong class="price">
+          R$37.70
+        </strong>
+      </li>
+
+      <li>
+        <div class="details">
+          <h3>Arroz</h3>
+          <p class="description">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+
+        <strong class="price">
+          R$17.70
+        </strong>
+      </li>
+
+    </ul>
+  </section>  
 </body>
 </html>
